feat: update metadata, enhance settings page, and improve sidebar translations

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,8 +1,13 @@
 {
-  "Global" : {
+  "Sidebar" : {
     "home": "Home",
     "messages": "Messages",
     "schedule": "Schedule",
     "settings": "Settings"
+  },
+  "Settings" : {
+    "light": "Light",
+    "dark": "Dark",
+    "system": "System"
   }
 }
