--- a/locales/fi.json
+++ b/locales/fi.json
@@ -4,5 +4,10 @@
     "messages": "Viestit",
     "schedule": "Lukujärjestys",
     "settings": "Asetukset"
+  },
+  "Settings" : {
+    "ligth": "Vaalea",
+    "dark": "Tumma",
+    "system": "Järjestelmä"
   }
 }
