--- a/locales/fi.json
+++ b/locales/fi.json
@@ -14,5 +14,8 @@
     "system": "Järjestelmä",
     "english": "Englanti",
     "finnish": "Suomi"
+  },
+  "Layout": {
+    "metadata": "Parempi Wilma-sovellus"
   }
 }
